More imformation for daily forecast info, tomorrow forecast implemented